# gmail-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  add_cv_to_drafts.py  pyproject.toml
src/gmail/: __init__.py  server.py
